login complete with logs

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "datatables.net-buttons-bs5": "^2.3.4",
     "datatables.net-responsive-bs5": "^2.4.0",
     "datatables.net-vue3": "^2.0.0",
+    "js-cookie": "^3.0.1",
     "jszip": "^3.10.1",
+    "jwt-decode": "^3.1.2",
     "pdfmake": "^0.2.7",
     "vue": "^3.2.45",
     "vue-jquery": "^1.0.6",
