--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "admin-lte": "3.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
