--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-vue": "^2.23.1",
+    "connect-history-api-fallback": "^2.0.0",
     "datatables": "^1.10.18",
     "datatables.net": "^1.13.2",
     "datatables.net-bs5": "^1.13.2",
